language/move-compiler/tests/move_check/translate/constant_in_expression_seq.exp
error[E02006]: invalid 'const' declaration
  ┌─ tests/move_check/translate/constant_in_expression_seq.move:3:9
  │
3 │         const a:u32 =1 ;
  │         ^^^^^^^^^^^^^^^^ 'const' is not allowed in expression sequence

