language/move-compiler/tests/move_check/translate/constant_in_expression_seq.move
script {
    fun main() {
        const a:u32 =1 ;
    }
}
